# filebin

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
pages/: file.hbs  upload.hbs
src/: api.rs  dbman.rs  main.rs  pages.rs  static_files.rs  utils.rs
static/: common.css  index.html
static/dir/: index.html
