[package]
name = "trunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
chrono = "0.4.22"
config = { version = "0.13.2", features = ["toml"] }
fern = "0.6.1"
log = "0.4.17"
sled = { version = "0.34.7" }
