[package]
name = "trunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
chrono = { version = "0.4.22", features = ["serde"] }
config = { version = "0.13.2", features = ["toml"] }
fern = "0.6.1"
log = "0.4.17"
sled = { version = "0.34.7" }
rust-embed = "6.4.1"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
mime = "0.3.16"
serde = "1.0.145"
uuid = { version = "1.1.2", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
base64 = "0.13.0"
mime-sniffer = "0.1.2"
mime_guess = "2.0.4"
percent-encoding = "2.2.0"
either = "1.8.0"
handlebars = "4.3.5"
serde_json = "1.0.86"
