[package]
name = "filebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
config = { version = "0.13.2", features = ["toml"] }
fern = "0.6.1"
log = "0.4.17"
sled = { version = "0.34.7", features = ["compression"] }
rust-embed = "6.4.1"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
mime = "0.3.16"
serde = "1.0.145"
uuid = { version = "1.1.2", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
base64 = "0.13.0"
mime_guess = "2.0.4"
handlebars = "4.3.5"
serde_json = "1.0.86"
regex = "1.6.0"
figment = { version = "0.10.8", features = ["env", "toml"] }
axum = { version = "0.6.1", features = ["http2", "multipart"] }
tokio = { version = "1.21.2", features = ["full"] }
http-body = "0.4.5"
async-compression = { version = "0.3.15", features = ["tokio", "brotli"] }
axum-extra = { version = "0.4.2", features = ["async-read-body"] }
tokio-util = { version = "0.7.4", features = ["io"] }
byte-unit = { version = "4.0.18", features = ["serde"] }
